force-app/main/default/objects/Blakeney_Interaction_Complete__e/Blakeney_Interaction_Complete__e.object-meta.xml
<CustomObject>
    <description>Published when Blakeney onboarding or career profile update completes.</description>
    <label>Blakeney Interaction Complete</label>
    <pluralLabel>Blakeney Interaction Complete Events</pluralLabel>
</CustomObject>