force-app/main/default/objects/Blakeney_Interaction_Complete__e/fields/Career_Intent_Id__c.field-meta.xml
<CustomField>
    <fullName>Career_Intent_Id__c</fullName>
    <label>Career Intent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>