force-app/main/default/objects/Blakeney_Interaction_Complete__e/fields/Updated_Fields__c.field-meta.xml
<CustomField>
    <fullName>Updated_Fields__c</fullName>
    <label>Updated Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>